--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
-*.config
-*.user
-*.csproj
-*.gpState
-*.sln
-*.suo
-/bin
-/obj
-/packages
-/Properties
-
-
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
-.DS_Store
+.settings
+nuget
+bower_components
+node_modules
