--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ env:
 before_script:
 - npm install -g grunt-cli
 - npm install -g bower
+-after_success:
+-- test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash deploy.sh
 deploy:
   provider: releases
   api_key:
