--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ env:
 before_script:
 - npm install -g grunt-cli
 - npm install -g bower
+script:
+- grunt build
 after_success:
-- test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash deploy.sh
+- bash deploy.sh
 deploy:
   provider: releases
   api_key:
