--- a/package.nuspec
+++ b/package.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>cmdrjs</id>
-    <version>0.0.0</version>
+    <version>1.0.4-alpha</version>
     <title>cmdrjs</title>
     <authors>Shaftware</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
