--- a/bower.json
+++ b/bower.json
@@ -5,12 +5,9 @@
   "keywords": ["command", "cmd", "shell", "console"],
   "repository": {
     "type": "git",
-    "url": "git@github.com:shaftware/cmdrjs.git"
+    "url": "git@github.com:cmdrjs/cmdrjs.git"
   },
   "dependencies": {
     "jQuery": ">=1.7.2"
-  },
-  "devDependencies": {
-    "requirejs": "*"
   }
 }
