--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babelify": "^7.2.0",
     "bower": "*",
+    "es6-promise": "^3.0.2",
     "express": "^4.13.0",
     "grunt": "^0.4.5",
+    "grunt-babel": "^6.0.0",
     "grunt-bower": "*",
     "grunt-bower-requirejs": "*",
     "grunt-bower-verify": "*",
+    "grunt-browserify": "^4.0.1",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-cssmin": "^0.12.3",
     "grunt-contrib-jshint": "*",
@@ -24,6 +30,6 @@
     "load-grunt-tasks": "*"
   },
   "scripts": {
-    "test": "bower install && grunt test"
+    "test": "grunt test"
   }
 }
