--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "bower": "*",
+    "browserify-header": "^0.9.2",
     "es6-promise": "^3.0.2",
     "express": "^4.13.0",
     "grunt": "^0.4.5",
