--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "noname",
-  "version": "0.0.0",
-  "private": true,
+  "name": "cmdrjs",
+  "version": "1.1.0",
+  "description": "A JavaScript based command line interface for web pages.",
+  "keywords": ["command", "cmd", "shell", "console"],
+  "homepage": "https://github.com/cmdrjs/cmdrjs",
+  "author": "John Cruikshank",
+  "license": "MIT",
+  "main": "dist/cmdr.js",
+  "dependencies": {
+    "es6-promise": "^3.0.2"
+  },
   "devDependencies": {
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "bower": "*",
     "browserify-header": "^0.9.2",
-    "es6-promise": "^3.0.2",
     "express": "^4.13.0",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
