--- a/package.json
+++ b/package.json
@@ -2,8 +2,17 @@
   "name": "cmdrjs",
   "version": "1.1.0",
   "description": "A JavaScript based command line interface for web pages.",
-  "keywords": ["command", "cmd", "shell", "console"],
+  "keywords": [
+    "command",
+    "cmd",
+    "shell",
+    "console"
+  ],
   "homepage": "https://github.com/cmdrjs/cmdrjs",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cmdrjs/cmdrjs.git"
+  },
   "author": "John Cruikshank",
   "license": "MIT",
   "main": "dist/cmdr.js",
@@ -15,10 +24,10 @@
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "bower": "*",
-    "browserify-header": "^0.9.2",
     "express": "^4.13.0",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
+    "grunt-banner": "^0.6.0",
     "grunt-bower": "*",
     "grunt-bower-requirejs": "*",
     "grunt-bower-verify": "*",
