--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cmdrjs",
-  "version": "1.1.0",
+  "version": "1.1.1-beta",
   "description": "A JavaScript based command line interface for web pages.",
   "keywords": [
     "command",
