--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cmdrjs",
-  "version": "1.1.3-beta",
+  "version": "1.1.3",
   "description": "A JavaScript based command line interface for web pages.",
   "keywords": [
     "command",
@@ -39,6 +39,7 @@
     "grunt-contrib-watch": "*",
     "grunt-karma": "*",
     "grunt-sass": "^1.1.0",
+    "grunt-version": "^1.0.0",
     "karma": "*",
     "karma-expect": "*",
     "karma-mocha": "*",
