--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-bower-requirejs": "*",
     "grunt-bower-verify": "*",
     "grunt-browserify": "^4.0.1",
+    "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-cssmin": "^0.12.3",
     "grunt-contrib-jshint": "*",
