--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "cmdrjs",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "A JavaScript based command line interface for web pages.",
   "keywords": [
     "command",
     "cmd",
     "shell",
-    "console"
+    "console",
+    "terminal"
   ],
   "homepage": "https://github.com/cmdrjs/cmdrjs",
   "repository": {
@@ -16,39 +17,36 @@
   "author": "John Cruikshank",
   "license": "MIT",
   "main": "dist/cmdr.js",
-  "dependencies": {
-    "es6-promise": "^3.0.2"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "babel-polyfill": "^6.3.14",
-    "babel-preset-es2015": "^6.3.13",
-    "babelify": "^7.2.0",
-    "bower": "*",
-    "express": "^4.13.0",
-    "grunt": "^0.4.5",
-    "grunt-babel": "^6.0.0",
-    "grunt-banner": "^0.6.0",
-    "grunt-bower": "*",
-    "grunt-bower-requirejs": "*",
-    "grunt-bower-verify": "*",
-    "grunt-browserify": "^4.0.1",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-cssmin": "^0.12.3",
-    "grunt-contrib-jshint": "*",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "*",
-    "grunt-karma": "*",
-    "grunt-sass": "^1.1.0",
-    "grunt-version": "^1.0.0",
-    "karma": "*",
-    "karma-expect": "*",
-    "karma-mocha": "*",
-    "karma-phantomjs-launcher": "*",
-    "karma-requirejs": "*",
-    "load-grunt-tasks": "*"
+    "@babel/core": "latest",
+    "@babel/preset-env": "latest",
+    "requirejs": "latest",
+    "babelify": "latest",
+    "express": "latest",
+    "node-sass": "latest",
+    "grunt": "latest",
+    "grunt-babel": "latest",
+    "grunt-banner": "latest",
+    "grunt-browserify": "latest",
+    "grunt-contrib-connect": "latest",
+    "grunt-contrib-copy": "latest",
+    "grunt-contrib-cssmin": "latest",
+    "grunt-contrib-jshint": "latest",
+    "grunt-contrib-uglify": "latest",
+    "grunt-contrib-watch": "latest",
+    "grunt-karma": "latest",
+    "grunt-sass": "latest",
+    "grunt-version": "latest",
+    "karma": "latest",
+    "karma-expect": "latest",
+    "karma-mocha": "latest",
+    "karma-requirejs": "latest",
+    "load-grunt-tasks": "latest"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "dev": "grunt dev",
+    "build": "grunt build"
   }
 }
